# bekgoogle

./: .gitignore  pyproject.toml
.claude/: settings.local.json
bekgoogle/: __init__.py  append_to_sheet.py  create_drive_subfolder.py  create_google_services.py  create_google_services_serviceaccount.py  delete_list_of_google_files.py  ensure_adc.py  get_creds.py  get_google_file_or_folder_ids.py  get_serviceaccount_creds.py  google_secrets.py  permission_to_drive_file.py  upload_admin_report.py  upload_files.py  upload_secrets.py  upload_sheet_to_drive.py
